--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -34,5 +34,11 @@
     "price": "Giá",
     "from-low": "Thấp đến Cao",
     "from-high": "Cap đến thấp"
+  },
+  "footer": {
+    "rights": "Tất cả các quyền được bảo lưu.",
+    "location": "Quốc gia & Khu vực",
+    "company": "Công ty TNHH",
+    "address": "Địa chỉ: Tầng 4-5-6, Tòa nhà Capital Place, số 29 đường Liễu Giai, Phường Ngọc Khánh, Quận Ba Đình, Thành phố Hà Nội, Việt Nam. Tổng đài hỗ trợ: 19001221 - Email: cskh@hotro.shopee.vn Chịu Trách Nhiệm Quản Lý Nội Dung: Nguyễn Đức Trí - Điện thoại liên hệ: 024 73081221 (ext 4678) Mã số doanh nghiệp: 0106773786 do Sở Kế hoạch & Đầu tư TP Hà Nội cấp lần đầu ngày 10/02/2015 © 2015 - Bản quyền thuộc về Công ty TNHH Shopee"
   }
 }
