commit for pulling code

--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -4,9 +4,12 @@
     "language-en": "English",
     "register": "Sign Up",
     "login": "Login",
+    "home": "Home",
+    "profile": "Profile",
     "no-account": "New to Shopee",
     "have-account": "Have an account already",
     "user": "My Account",
+    "search-placeholder": "Free ship to 50%",
     "purchase": "My Purchase",
     "logout": "Logout",
     "cart-add-item": "Recently Added Products",
