--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -7,6 +7,7 @@
     "no-account": "Bạn chưa có tài khoản",
     "have-account": "Bạn đã có tài khoản",
     "user": "Tài Khoản Của Tôi",
+    "search-placeholder": "Free ship đến 50%",
     "purchase": "Đơn Mua",
     "logout": "Đăng Xuất",
     "cart-add-item": "Sản phẩm mới thêm",
