--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -4,6 +4,7 @@
     "language-en": "Tiếng Anh",
     "register": "Đăng Ký",
     "login": "Đăng Nhập",
+    "profile": "Hồ Sơ",
     "no-account": "Bạn chưa có tài khoản",
     "have-account": "Bạn đã có tài khoản",
     "user": "Tài Khoản Của Tôi",
